# biothings_schema.py

./: .gitignore  CONTRIBUTION.md  MANIFEST.in  README.md  Schema Explorer Demo.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
.github/workflows/actions/: action.yml
biothings_schema/: HISTORY.md  __init__.py  base.py  curies.py  dataload.py  schema.py  settings.py  utils.py  validator.py  validator_schemas.py
biothings_schema/data/: bioschemas.json  class_json_schema.json  property_json_schema.json  schema.json
biothings_schema/tests/: test_bioschemas.py  test_biothings_schema.py  test_class_override.py  test_curie_uri_converter.py  test_schema_class.py  test_schema_org.py  test_schema_validator.py  test_schemaclass_class.py  test_schemaproperty_class.py  time.py
biothings_schema/tests/data/: class_override.json  data2file_schema.jsonld  extend_from_bioschemas.json  nested_schema.json
docs/: conf.py  index.rst
docs/doc/: explore.rst  load.rst  validate.rst  visualize.rst
docs/doc/schemaorg/: basics.rst  extend.rst  intro.rst
jupyter notebooks/: Explore classes and properties of Schema.ipynb  Load Schema.ipynb  Validate JSON using json schema defined in Schema file.ipynb  Validation merging on inherited classes.ipynb  Visualizing Schema.ipynb
schema_explorer/: __init__.py  base.py
schema_explorer/data/: biothings.jsonld  property_json_schema.json
schema_explorer/tests/: test_schema_validator.py
tests/: test_bioschemas.py  test_biothings_schema.py  test_class_override.py  test_curie_uri_converter.py  test_schema_class.py  test_schema_org.py  test_schema_validator.py  test_schemaproperty_class.py
tests/data/: biosample_schema.json  extend_from_bioschemas.json  mock_multi-inheritance_schema.jsonld
