[build-system]
requires = ["setuptools>=67.4.0"]
build-backend = "setuptools.build_meta"

[project]
name="biothings_schema"
authors = [
    {name = "Jiwen Xin"},
    {name = "Chunlei Wu", email = "cwu@scripps.edu"},
    {name = "Nichollette Acosta"}
]
requires-python = ">=3.8"
description = "Python Client for BioThings Schema"
readme = "README.md"
license = { text = "Apache License 2.0" }
keywords = ["schema",  "biothings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
dependencies = [
    "jsonschema[format]>=4.4.0",
    "networkx>=2.6.3",
    "PyYAML>=5.1",
    "requests>=2.26.0"
]

[project.optional-dependencies]
extra = [
    "graphviz>=0.19.1"
]

dev = [
    "pytest>=8"
]

[project.urls]
homepage = "https://github.com/biothings/biothings_schema.py"
repository = "https://github.com/biothings/biothings_schema.py"

[tool.setuptools]
zip-safe = true
packages = ["biothings_schema"]

[tool.setuptools.dynamic]
version = {attr = "biothings_schema.__version__"}

[tool.black]
line-length = 99
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 159
src_paths = ["."]

[tool.flake8]
# Let Black handle all the formatting.
ignore = "E,W503,B028"
exclude = """
  tests/snapshots,
  .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg
"""

[tool.pylint.FORMAT]
max-line-length = 159
